fix(database): Update database entity, generate data and file data sample.